--- a/boot.css
+++ b/boot.css
@@ -97,3 +97,37 @@ html * {
     width: 100%;
     height: auto;
 }
+
+.hi {
+    margin:2em auto;
+    text-align: center;
+}
+
+.wave {
+    margin-top: .5em;
+    font-size: 100px;
+    animation-name: wave-animation;
+	animation-duration: 3.5s;
+	animation-iteration-count: infinite;
+	transform-origin: 70% 70%;
+	display: inline-block;
+}
+
+@keyframes wave-animation {
+	0% {transform: rotate(0.0deg)}
+	10% {transform: rotate(-10.0deg)}
+	20% {transform: rotate(12.0deg)}
+	30% {transform: rotate(-10.0deg)}
+	40% {transform: rotate(9.0deg)}
+	50% {transform: rotate()0.0deg}
+	100% {transform: rotate()0.0deg}
+}
+
+.divider {
+    /*divider color & height for firefox*/
+    background-color: #00a676;
+    height: 2px;
+    display: block;
+    
+}
+
