--- a/boot.css
+++ b/boot.css
@@ -103,6 +103,10 @@ html * {
     text-align: center;
 }
 
+.greeting {
+    font-size: 80px;
+}
+
 .wave {
     margin-top: .5em;
     font-size: 100px;
@@ -131,3 +135,31 @@ html * {
     
 }
 
+/*splash.php css*/
+.html * {
+    font-family: 'Raleway', sans-serif;
+}
+
+body, html {
+    height: 100%;
+    display: grid;
+}
+
+body{
+    background-color: black;
+}
+
+.splash {
+    background-color: #00a676;
+    text-align: center;
+    margin: auto;
+    padding: 3em;
+}
+
+.nameForm {
+    margin: 2em 0 0 0 ;
+}
+
+.nameLabel {
+    font-size: 22px;
+}
