--- a/boot.css
+++ b/boot.css
@@ -136,16 +136,14 @@ html * {
 }
 
 /*splash.php css*/
-.html * {
-    font-family: 'Raleway', sans-serif;
-}
+
 
 body, html {
     height: 100%;
     display: grid;
 }
 
-body{
+.index{
     background-color: #3a806c;
 }
 
